apps/plex/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: plex-gateway
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.1.26
  listeners:
  - name: web
    hostname: plex.mdch-lab.dev
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: plex.mdch-lab.dev-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-web
  namespace: plex
spec:
  parentRefs:
  - name: plex-gateway
    sectionName: web
  hostnames:
  - "plex.mdch-lab.dev"
  rules:
  - backendRefs:
    - name: plex-plex-media-server
      port: 32400
